--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
-
+    signingConfigs {
+        config {
+            keyAlias 'key0'
+            keyPassword 'Codemonster123'
+            storeFile file('/home/precious/Documents/Android Projects/PES/app/PESAdminKeystore.jks')
+            storePassword 'Codemonster123'
+        }
+    }
     applicationVariants.all { variant ->
         variant.outputs.all { output ->
             def newApkName = applicationId + "-" + variant.versionName + ".apk"
             outputFileName = new File(variant.name, newApkName)
         }
     }
-
-
     compileSdkVersion 27
     defaultConfig {
         applicationId "org.afrikcode.pes"
@@ -23,12 +28,13 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.google.firebase:firebase-auth:11.8.0'
     implementation 'com.google.firebase:firebase-firestore:11.8.0'
@@ -39,7 +45,6 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
 }
