--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,5 +8,7 @@ pipelines:
   default:
     - step:
         script:
+          - mkdir "${ANDROID_HOME}/licenses" || true
+          - echo "8933bad161af4178b1185d1a37fbf41ea5269c55" > "${ANDROID_HOME}/licenses/android-sdk-license"
           - chmod +x gradlew
           - ./gradlew assembleDebug
