--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
         config {
             keyAlias 'key0'
             keyPassword 'Codemonster123'
-            storeFile file('C:/Users/Hover Software Soln/Sofware Projects/Android/PES/app/PESAdminKeystore.jks')
+            storeFile file('PESAdminKeystore.jks')
             storePassword 'Codemonster123'
         }
     }
